<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings.MainActivity"
    android:background="#fff"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="467dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_WelcomeMessage_SettingsActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:textColor="#666666"
                android:paddingStart="90dp"
                android:text="@string/welcome"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:textColor="#000"

                android:layout_marginBottom="30dp"
                android:text="@string/welcomeMessage"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="#000"

                    />

                <EditText
                    android:id="@+id/editText_name_settingsActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:hint="@string/nameHint"
                    android:inputType="textPersonName"
                    android:textColor="#000"


                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tableNo"
                    android:textColor="#000"

                    />

                <EditText
                    android:id="@+id/editText_tableNo_SettingsActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:hint="@string/tableNoHint"
                    android:textColor="#000"

                    android:inputType="textPersonName|numberSigned" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_next_settingsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:background="@drawable/edittext_background"
        android:text="next"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>