<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff1e2"
    >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTxt_Name_AddItemFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/hintItemName"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:id="@+id/editText_Price_AddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/hintPrice"
            android:inputType="number"
            android:paddingStart="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="3dp" />

        <Button
            android:id="@+id/btn_addItem_AddItemFragment"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:background="#a8d3e9"
            android:text="@string/addItem" />
    </LinearLayout>
</RelativeLayout>