<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a3080c"
    android:orientation="vertical"
    tools:context=".AuthActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tv_email_AuthActivity"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_background"
            android:ems="10"

            android:hint="@string/typeEmail"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"

            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/tv_password_AuthActivity"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/typePassword"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/btn_login_AuthActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="120dp"
            android:background="#a8d3e9"
            android:text="@string/loginKey" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_status_AuthActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="#a8d3e9" />

</LinearLayout>